tests/baselines/reference/classExtendingAny.errors.txt
tests/cases/compiler/a.ts(5,9): error TS7040: 'super' implicitly has type 'any' because the base class is of type 'any'.
tests/cases/compiler/a.ts(6,9): error TS7040: 'super' implicitly has type 'any' because the base class is of type 'any'.
tests/cases/compiler/a.ts(7,9): error TS7040: 'super' implicitly has type 'any' because the base class is of type 'any'.
tests/cases/compiler/a.ts(16,9): error TS7040: 'super' implicitly has type 'any' because the base class is of type 'any'.
tests/cases/compiler/b.js(3,9): error TS7040: 'super' implicitly has type 'any' because the base class is of type 'any'.
tests/cases/compiler/b.js(8,14): error TS7041: Property 'wit' implicitly has type 'any' because the base class is of type 'any'.
tests/cases/compiler/b.js(9,14): error TS7041: Property '"wot"' implicitly has type 'any' because the base class is of type 'any'.
tests/cases/compiler/b.js(10,9): error TS7040: 'super' implicitly has type 'any' because the base class is of type 'any'.


==== tests/cases/compiler/a.ts (4 errors) ====
    declare var Err: any
    class A extends Err {
        payload: string
        constructor() {
            super(1,2,3,3,4,56) // no implicit any
            ~~~~~
!!! error TS7040: 'super' implicitly has type 'any' because the base class is of type 'any'.
            super.unknown // no implicit any
            ~~~~~
!!! error TS7040: 'super' implicitly has type 'any' because the base class is of type 'any'.
            super['unknown'] // no implicit any
            ~~~~~
!!! error TS7040: 'super' implicitly has type 'any' because the base class is of type 'any'.
        }
        process() {
            return this.payload + "!";
        }
    }
    
    var o = {
        m() {
            super.unknown // no implicit any
            ~~~~~
!!! error TS7040: 'super' implicitly has type 'any' because the base class is of type 'any'.
        }
    }
==== tests/cases/compiler/b.js (4 errors) ====
    class B extends Err {
        constructor() {
            super() // no implicit any
            ~~~~~
!!! error TS7040: 'super' implicitly has type 'any' because the base class is of type 'any'.
            this.wat = 12
        }
        f() {
            this.wat      // ok
            this.wit // no implicit any
                 ~~~
!!! error TS7041: Property 'wit' implicitly has type 'any' because the base class is of type 'any'.
            this['wot'] // no implicit any
                 ~~~~~
!!! error TS7041: Property '"wot"' implicitly has type 'any' because the base class is of type 'any'.
            super.alsoBad // no implicit any
            ~~~~~
!!! error TS7040: 'super' implicitly has type 'any' because the base class is of type 'any'.
        }
    }
    